--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sujan Ahmed</title>
+    <title>Bodrul Islam</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="header container">
             <div class="nav-bar">
                 <div class="logo brand">
-                    <a href=""><h1><span>S</span>ujan <span>A</span>hmed</h1></a>
+                    <a href=""><h1><span>B</span>odrul <span>I</span>slam</h1></a>
                 </div>
                 <div class="nav-list">
                     <div class="hamburger">
@@ -40,7 +40,7 @@
             <div>
                 <h1>Hello, <span></span></h1>
                 <h1>My Name is <span></span></h1>
-                <h1>Sujan Ahmed <span></span></h1>
+                <h1>Bodrul Islam <span></span></h1>
                 <a href="#projects" type="button" class="cta">Portfolio</a>
               </div>
         </div>
@@ -233,7 +233,7 @@
     <section id="footer">
      <div class="container footer">
         <div class="brand">
-            <h1><span>S</span>ujan <span>A</span>hmed</h1>
+            <h1><span>B</span>odrul <span>I</span>slam</h1>
             <h2>Your Complete web Solution</h2>
             <div class="social-icon">
                 <div class="social-item">
@@ -249,7 +249,7 @@
                     <a href=" "><img src="img/icon12.png" alt=""></a>
                 </div>
             </div>
-            <p class="copy-right">Copyright &copy;2020 Sujan Ahmed. All right reserve</p>
+            <p class="copy-right">Copyright &copy;2020 Bodrul Islam. All right reserve</p>
         </div>
      </div>
     </section>
